--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
 main {
 display: flex;
 flex-direction: row;
-border: 1px solid black;
+
 }
 .left-div {
     background-color: var(--Dark-Blue);
@@ -100,21 +100,30 @@ strong {
 }
 #progressbar {
     background-color: var(--Very-Dark-Blue);
-    border-radius: 13px;
+    border-radius: 15px;
     /* (height of inner div) / 2 + padding */
-    padding: 3px;
+    padding: 2px;
 }
   
 #progressbar>div {
     background-image: linear-gradient(to right,hsl(6, 100%, 80%),hsl(335, 100%, 65%));
     width: 80%;
     /* Adjust with JavaScript */
-    height: 10px;
-    border-radius: 10px;
+    height: 13px;
+    border-radius: 15px;
   }
 .attribution { 
     font-size: 11px;
-    text-align: center; }
+    text-align: center;
+    margin-top: 3rem;
+    color: var(--Pale-Blue);
+    font-size: 14px;
+}
 .attribution a { 
-    color: hsl(228, 45%, 44%);
+    text-decoration: none;
+    color: var(--Pale-Blue);
+    font-size: 14px;
+}
+.attribution a:hover {
+    color: var(--Grayish-Blue);
 }
